--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "startApp": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
